# RTOS-David-Ramirez-2025-1S

./: .gitignore  README.md
Core/: CMakeLists.txt  README.md
Core/main/: CMakeLists.txt  gpio_example_main.c  gpio_handler.c  gpio_handler.h  io_utils.c  io_utils.h  main.c  tim_ch_duty.c  tim_ch_duty.h
Core/main/drivers/: dht11.c  dht11.h  ssd1306.c
Core/main/lib/: adc_utils.c  adc_utils.h  io_utils.c  io_utils.h  lqi2c-esp.c  lqi2c-esp.h  tim_ch_duty.c  tim_ch_duty.h
Core/main/request/: http_server.c  http_server.h  tasks_common.h  wifi_app.c  wifi_app.h
Core/main/utils/: adc_utils.c  adc_utils.h  io_utils.c  io_utils.h  tim_ch_duty.c
Core/main/webpage/: app.css  app.js  index.html
